--- a/settings.yaml
+++ b/settings.yaml
@@ -2,18 +2,18 @@
 ### DATASET PATHS
 # use absolute paths
 # path to downloaded dataset
-path_main_db: ''
+path_main_db: '/home/maciejka/Desktop/school/S8/labwork-project/db/input'
 
 # path to prepreprocessed dataset
-path_prepreprocessed_db: ''
+path_prepreprocessed_db: '/home/maciejka/Desktop/school/S8/labwork-project/db/dataset'
 
 # path to preprocessed dataset
-path_preprocessed_db: ''
+path_preprocessed_db: '/home/maciejka/Desktop/school/S8/labwork-project/db/dataset_preprocessed'
 
 ### PREPROCESSING SETTINGS
 
 # amount of images in dataset, write 'max' to select every image in downloaded dataset
-dataset_size: 40
+dataset_size: max
 
 # destination image size
 img_size: [256, 256]
@@ -27,18 +27,25 @@ resizing_policy: 'keep_proportions'
 resizing_method: 'lanczos'
 
 # data split [train, test, val] - sums to 1
-data_split: [0.6, 0.2, 0.2]
+data_split: [0.7, 0.15, 0.15]
 
 ## PREPROCESSING - OUTPUT IMAGE OPTIONS
 
-# max_hz: pick random value between max_hz[0] and max_hz[1] and cut the frequencies above
+# max_hz: used in low-pass filtering of an image. pick random value between max_hz[0] and max_hz[1] and cut the frequencies above
 max_hz: [30, 100]
 
-# gaussian_mean: pick random value between gaussian_mean[0] and gaussian_mean[1] and apply gaussian noise with selected mu
+# gaussian_mean: used to apply gaussian noise. pick random value between gaussian_mean[0] and gaussian_mean[1] and apply gaussian noise with selected mu
 gaussian_mean: [-10, 10]
 
-# gaussian_std: pick random value between gaussian_std[0] and gaussian_std[1] and apply gaussian noise with selected sigma
+# gaussian_std: used to apply gaussian noise. pick random value between gaussian_std[0] and gaussian_std[1] and apply gaussian noise with selected sigma
 gaussian_std: [5, 15]
+
+# hole_radius: used to generate holes on an image. pick random value between hole_radius[0] and hole_radius[1], then erase the part of the image by
+# generating black holes with selected radius
+hole_radius: [10, 20]
+
+# hole_amount: used to generate holes on image. Defines the amount of holes on the image, by selecting random int between hole_amount[0] and hole_amount[1]
+hole_amount: [0, 4]
 
 
 ### TRAINING SETTINGS
